app/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend
  namespace: app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: hauncho/dunoesanchaeg-backend:latest

          ports:
            - containerPort: 8080

          imagePullPolicy: Always
