app/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend-service
  namespace: app

spec:
  selector:
    app: backend

  ports:
    - port: 80
      targetPort: 8080

  type: ClusterIP
