app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: dunoesanchaeg-ingress
  namespace: app

spec:
  ingressClassName: nginx

  rules:
    - host: dunoesanchaeg.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend-service
                port:
                  number: 80
